--- a/.github/workflows/update-xla-commit-hash.yml
+++ b/.github/workflows/update-xla-commit-hash.yml
@@ -2,11 +2,14 @@ name: Update xla commit hash
 
 on:
   schedule:
-    - cron: 0 0 * * *
+    # Every day at 12:37am
+    # Choose a random time near midnight because it may be delayed if there are high loads
+    # See https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows#schedule
+    - cron: 37 0 * * *
   workflow_dispatch:
 
 env:
-  NEW_BRANCH_NAME: clee2000/xla/${{ github.run_id }}-${{ github.run_number }}-${{ github.run_attempt }}
+  NEW_BRANCH_NAME: update-xla-commit-hash/${{ github.run_id }}-${{ github.run_number }}-${{ github.run_attempt }}
 
 jobs:
   update-xla-commit-hash:
@@ -32,8 +35,8 @@ jobs:
           popd
           if [[ $(git diff --exit-code .github/xla_commit_hash.txt) ]]; then
             git checkout -b "${NEW_BRANCH_NAME}"
-            git config --global user.email "csl@fb.com"
-            git config --global user.name "Catherine Lee"
+            git config --global user.email "pytorchmergebot@users.noreply.github.com"
+            git config --global user.name "PyTorch MergeBot"
             git add .github/xla_commit_hash.txt
             git commit -m "update xla commit hash"
             git push --set-upstream origin "${NEW_BRANCH_NAME}"
